--- a/accounts/templates/accounts/user_register.html
+++ b/accounts/templates/accounts/user_register.html
@@ -4,6 +4,6 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Send OTP code</button>
     </form>
 {% endblock %}
