--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,4 +1,17 @@
 {% extends 'base.html' %}
 {% block 'content' %}
-    <h1>Home</h1>
+    <div class="d-flex justify-content-around">
+        {% for product in products %}
+            <div class="card" style="width: 18rem;">
+                <div class="h-75 d-flex justify-content-center align-items-center">
+                    <img class="card-img-top" src="{{ product.picture.url }}" alt="{{ product.picture }}">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">{{ product.description }}</p>
+                    <a href="{{ product.get_absolute_url }}" class="btn btn-primary">detail</a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
