add order and order_item and cart
add delete create list and detail view of order and cart

--- a/category/templates/category/product_detail.html
+++ b/category/templates/category/product_detail.html
@@ -8,7 +8,12 @@
             <h2>{{ product.name }}</h2>
             <p>{{ product.description }}</p>
             <p>price: {{ product.price }}</p>
-            <a class="btn btn-primary">Buy</a>
+            <form action="{% url 'orders:cart_add' product.id %}" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+
+                <button type="submit" class="btn btn-primary">Add to Cart</button>
+            </form>
         </div>
 
     </div>
