--- a/category/templates/category/product_detail.html
+++ b/category/templates/category/product_detail.html
@@ -2,7 +2,11 @@
 {% block 'content' %}
     <div class="d-flex p-4">
         <div class="w-25 me-5">
-            <img class="w-100" src="{{ product.picture.url }}" alt="{{ product.picture }}">
+            {% if product.picture %}
+                <img class="card-img-top" src="{{ product.picture.url }}" alt="{{ product.picture }}">
+            {% else %}
+                <img class="card-img-top" src="" alt="">
+            {% endif %}
         </div>
         <div class="w-75">
             <h2>{{ product.name }}</h2>
